src/main/java/com/example/sebackend/error/ServiceError.java
package com.example.sebackend.error;

public interface ServiceError {
    String getMessage();

    Integer getCode();
}